--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-  background-color: #0b8ee0
+  background-color: gray
 }
 
 .intro {
-
+  
 }
 
 .intro p {
