--- a/main.css
+++ b/main.css
@@ -4,8 +4,24 @@ body {
   background-color: gray
 }
 
+nav ul{
+  text-align: center;
+  font-size: 20px;
+}
+
+nav ul li{
+  display: inline-block;
+  margin: 75px;
+}
+
+nav ul li a{
+  text-decoration: none;
+  color: #1dcece
+}
+
+
 .intro {
-  
+
 }
 
 .intro p {
@@ -14,7 +30,7 @@ body {
 
 .project {
     text-decoration: none;
-    color: #008080;
+  color: #1dcece
     /* display: inline-block;
     overflow: hidden;
     border: 2px solid lightblue;
