--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  color: #3D013C;
   /* text-align: center; */
 }
 
@@ -13,7 +14,7 @@ nav ul {
   justify-content: flex-end;
   position: fixed;
   width: 100%;
-  background-color: white;
+  background-color: #60487F;
   font-size: 1.25rem;
 }
 
@@ -26,7 +27,7 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
-  color: #1dcece;
+  color: #4AF8FF;
 }
 
 @media only screen and (max-width: 500px) {
@@ -45,7 +46,7 @@ nav ul li a {
   min-height: 55vh;
   padding-top: 45vh;
   text-align: center;
-  background-color: gray;
+  background-color: #4AF8FF;
 }
 
 .intro p {
@@ -55,7 +56,7 @@ nav ul li a {
 
 .project {
   text-decoration: none;
-  color: #1dcece;
+  color: #3D013C;
   /* display: inline-block;
     overflow: hidden;
     border: 2px solid lightblue;
@@ -72,17 +73,19 @@ nav ul li a {
   flex-wrap: wrap;
 }
 
-.work .work-header {
-  margin-top: 50px;
+.work-header {
   font-weight: normal;
+  text-align: center;
+  padding: 20px;
 }
 
 .work {
-  background-color: white;
+  background-color: #68C2E5;
 }
 
 figure {
   max-width: 200px;
+  padding: 20px;
 }
 
 .figure-pic {
@@ -98,6 +101,7 @@ figcaption {
 
 .header {
   text-align: center;
+  padding: 30px;
 }
 
 .header p {
@@ -106,7 +110,7 @@ figcaption {
 }
 
 .contact {
-  background-color: gray
+  background-color: #7888BF;
 }
 
 .contact-details {
@@ -114,24 +118,25 @@ figcaption {
   font-weight: bold;
   margin: 0 35px 45px 35px;
   list-style-type: none;
-  border: 2px solid #1dcece;
+  border: 2px solid #4AF8FF;
   border-radius: 20%;
   width: 100px;
   height: 100px;
   line-height: 100px;
   background: #e0ebe8;
-  color: #1dcece;
+  color: #4AF8FF;
   text-decoration: none;
 
 }
-#contact {
-  
+.contact-box {
+  display: flex;
+  justify-content: center;
+  padding: 30px;
 }
 
 #contact a {
   text-align: center;
   background-color: white;
-  margin: 0%;
 }
 
 .contact-details:hover {
@@ -154,6 +159,8 @@ figcaption {
 }
 
 footer {
-  background-color: white;
+  background-color: #3D013C;
   text-align: center;
+  color: #4AF8FF;
+  padding: 10px;
 }
