--- a/main.css
+++ b/main.css
@@ -43,15 +43,58 @@ nav ul li a {
 }
 
 .intro {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-between
   min-height: 55vh;
   padding-top: 45vh;
-  text-align: center;
   background-color: rgb(183, 188, 189);
+}
+
+.intro div {
+  
+  width: 400px;
+  height: 400px;
+  text-align: center;
+  /* color:red; 
+  background:#f0f0f0;
+  width:100%;
+  height:120px;
+  line-height:120px;
+  overflow:hidden;
+  position:relative; */
+  /* border: 2px solid yellow; */
+}
+
+/* @keyframes slide {
+  from { left:100%; transform: translate(0, 0); }
+  to { left: -100%; transform: translate(-100%, 0); }
+}
+@-webkit-keyframes slide {
+  from { left:100%; transform: translate(0, 0); }
+  to { left: -100%; transform: translate(-100%, 0); }
+}
+
+.intro div div {
+  position:absolute;
+  top:0;
+  white-space: nowrap;
+  height:120px;
+  font-size:15px;
+  animation-name: slide;
+  animation-duration: 30s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: slide;
+  -webkit-animation-duration: 30s;
+  -webkit-animation-timing-function:linear;
+  -webkit-animation-iteration-count: infinite;
 }
 
 .intro p {
   color: white;
-}
+} */
 
 
 .project {
