took off border

--- a/main.css
+++ b/main.css
@@ -64,7 +64,7 @@ nav ul li a {
   line-height:120px;
   overflow:hidden;
   position:relative; */
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
 }
 
 /* @keyframes slide {
