--- a/css/pokemon.css
+++ b/css/pokemon.css
@@ -1,3 +1,9 @@
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .container {
     display: flex;
     justify-content: space-around;
