added flip animation and color

--- a/css/pokemon.css
+++ b/css/pokemon.css
@@ -1,26 +1,74 @@
+body {
+    background: black;
+}
+
+h1 {
+    color: white;
+}
+
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
 .container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.box {
-    margin: 8px;
-    width: 120px;
-    height: 150px;
-    text-align: center;
+.scene {
+  width: 220px;
+  height: 240px;
+  border: 1px solid #ccc;
+  margin: 4px;
+  perspective: 600px;
+}
+
+.card {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  position: relative;
+}
+
+.card.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.card__face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  backface-visibility: hidden;
+  background: gray;
+}
+
+.card_face--front {
+  background: black;
+}
+
+.card__face--back {
+  text-align: center;
+  transform: rotateY(180deg);
+  background: gray;
+}
+
+figure {
+  margin: 0px;
+  padding: 4px;
+}
+
+button {
+  width: 300px;
 }
 
 img {
-    width: 220px;
-}
-
-body {
-    height: 1050px;
+  padding: 4px;
+  width: 200px;
+  height: 200px;
 }
