--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ nav ul {
   justify-content: flex-end;
   position: fixed;
   width: 100%;
-  background-color: white;
+  background-color: black;
   font-size: 1.25rem;
 }
 
@@ -43,10 +43,7 @@ nav ul li a {
 }
 
 .intro {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: space-between;
+  text-align: center;
   min-height: 55vh;
   padding-top: 45vh;
   background-color: rgb(183, 188, 189);
@@ -136,7 +133,7 @@ figure {
 
 .figure-pic {
   width: 100%;
-  height: 180px;
+  height: 115px;
 }
 
 figcaption {
