--- a/css/pokemon.css
+++ b/css/pokemon.css
@@ -29,6 +29,10 @@ main {
   text-align: center;
   width: 100%;
   height: 100%;
+  /* -webkit-transition: transform 1s;
+  -moz-transition: transform 1s;
+  -ms-transition: transform 1s;
+  -o-transition: transform 1s; */
   transition: transform 1s;
   transform-style: preserve-3d;
   cursor: pointer;
@@ -74,12 +78,17 @@ button {
   height: 80px;
   background: rgb(42, 43, 39);
   color: white;
+  margin: 10px;
 }
 
 img {
   padding: 4px;
   width: 200px;
   height: 200px;
+}
+
+label {
+  color: white;
 }
 
 .backImage {
