--- a/css/pokemon.css
+++ b/css/pokemon.css
@@ -6,6 +6,11 @@ h1 {
     color: white;
 }
 
+h2 {
+  color: white;
+  text-align: center;
+}
+
 main {
   display: flex;
   flex-direction: column;
