--- a/kh.css
+++ b/kh.css
@@ -1,3 +1,9 @@
+body {
+  background-image: url(./images/background.jpg);
+  width: 400%;
+  height: 100%;
+}
+
 h1 {
   text-align: center;
   color: white;
