--- a/kh.css
+++ b/kh.css
@@ -1,7 +1,7 @@
 body {
   background-image: url(./images/background.jpg);
-  width: 400%;
-  height: 100%;
+  /* width: 400%;
+  height: 100%; */
 }
 
 h1 {
