--- a/css/pokemon.css
+++ b/css/pokemon.css
@@ -3,11 +3,17 @@ body {
 }
 
 h1 {
-    color: white;
+    color: rgb(255, 230, 0);
+    text-shadow:  
+     1px  2px     rgb(34, 106, 240), 
+    -1px  2px     rgb(34, 106, 240), 
+     1px -2px     rgb(34, 106, 240), 
+    -1px -2px     rgb(34, 106, 240),
+     1px  2px 5px rgb(34, 106, 240);
 }
 
 h2 {
-  color: white;
+  color: rgb(255, 0, 0);
   text-align: center;
 }
 
@@ -26,8 +32,10 @@ main {
   width: 220px;
   height: 240px;
   border: 1px solid #ccc;
-  margin: 4px;
+  margin: 15px;
   perspective: 600px;
+  border-radius: 1rem;
+  box-shadow: 3px 3px 5px rgb(255, 255, 255);
 }
 
 .card {
@@ -55,6 +63,7 @@ main {
   text-align: center;
   backface-visibility: hidden;
   background: gray;
+  border-radius: .7rem;
 }
 
 .card_face--front {
@@ -90,6 +99,7 @@ img {
   padding: 4px;
   width: 200px;
   height: 200px;
+  
 }
 
 label {
@@ -100,4 +110,40 @@ label {
   position: absolute;
   left: 6px;
   opacity: .3;
+}
+
+.poison:hover {
+  border: 4px solid purple;
+}
+
+.normal:hover {
+  border: 4px solid gray;
+}
+
+.water:hover {
+  border: 4px solid blue;
+}
+
+.grass:hover {
+  border: 4px solid green;
+}
+
+.flying:hover {
+  border: 4px solid lightgray;
+}
+
+.fire:hover {
+  border: 4px solid red;
+}
+
+.fairy:hover {
+  border: 4px solid pink;
+}
+
+.electric:hover {
+  border: 4px solid yellow;
+}
+
+.psychic:hover {
+  border: 4px solid rgb(235, 68, 235);
 }
